@@ -4,6 +4,7 @@ Changes in 2.1.8
     * [FELIX-5927] - Single element Annotation type does not incorporate PREFIX_
     * [FELIX-5926] - Logger instance is not set for constructor and reference injection
     * [FELIX-5929] - Failed activation state not reported in DTOs
+    * [FELIX-5930] - Service reference is missing in DTO
 
 
 Changes in 2.1.6
